# clerk

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: raspberry.rs  raspberry_custom_char.rs  raspberry_hello_world.rs  raspberry_read.rs
examples/app/: Cargo.toml
examples/app/examples/: hello.rs
examples/app/src/: extern_pin.rs  main.rs
examples/utils/: custom_delay.rs  extern_pin.rs  mod.rs
src/: address.rs  display.rs  display_control.rs  entry_mode.rs  function_set.rs  hal.rs  lib.rs  lines.rs
tests/: display_test.rs  integration_test.rs
